# actor-model-system-in-tokio

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.autometrics/prometheus/data/01HEZFCEDTZF3GZ654CAWMD5AY/: index  meta.json
.autometrics/prometheus/data/01HEZFCEDTZF3GZ654CAWMD5AY/chunks/: 000001
.autometrics/prometheus/data/01HEZFCF4C95X02NQG378GPNJV/: index  meta.json
.autometrics/prometheus/data/01HEZFCF4C95X02NQG378GPNJV/chunks/: 000001
.autometrics/prometheus/data/chunks_head/: 000001
.autometrics/prometheus/data/wal/: 00000000  00000001  00000002  00000003  00000004  00000005  00000006  00000008  00000009  00000010  00000011  00000012
.autometrics/prometheus/data/wal/checkpoint.00000007/: 00000000
.autometrics/prometheus/data/wal/checkpoint.00000009/: 00000000
.cargo/: config.toml
db/: orders.json
src/: main.rs
web-folder/: index.html
