[package]
name = "actor_model_system_in_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Web
axum = "0.6.20"
tower-http = {version = "0.4", features = ["fs"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# -- Metrics
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }